# gateway-challenge

./: .env.actions  .env.sample  .gitignore  Dockerfile  Dockerfile.nginx  Makefile  README.extras.md  README.md  docker-compose-test.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ruff.yml  unit-test.yml
app/: main.py  scheduler.py
app/constants/: README.md  limits.py
app/data/: data_map.py
app/db/: README.md  clients.py  uploads.py
app/routers/: README.md  auths.py  healths.py  ocrs.py  users.py
app/scripts/: init_pinecone.py
app/serializers/: README.md  commons.py  ocrs.py
app/services/: README.md  auths.py  env_man.py  limits.py  logs.py  storages.py
app/services/oai/: chats.py  rags.py
app/services/ocrs/: parsers.py  utils.py
app/tasks/: README.md  interfaces.py  ocrs.py
app/tests/: test_auths.py  test_chats.py  test_db_uploads.py  test_limits.py  test_ocrs.py  test_services.py
app/validators/: README.md  ocrs.py
