[tool.poetry]
name = "incubit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.4.0"}
pytest-xdist = "^3.6.1"
fastapi = "^0.111.0"
nanoid = "^2.0.0"
boto3 = "^1.34.115"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
